# BaggageHandlingSimulator

./: .gitignore  CONTAINER.md  Dockerfile  README.md  azure-template.json  container-template.json  debug-entry.sh  deploy.ps1  deploy.sh  generate-template.ps1  publish-container.ps1  pyproject.toml
.github/: dependabot.yml
.github/workflows/: build_container.yml
asaql/: Transform.asaql  asaproj.json
kql/: airport_events.kql  event_tables.kql  stats_tables.kql
message-definitions/: airport-baggage-stats.xreg.json  airport-baggage.xreg.json
sql/: create_flights.sql
src/baggage_simulator/: __init__.py  cli.py  simulator.py
